c4prj1_deck/grade.txt
Grading at Sun May 23 08:45:19 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:89:17: error: ‘c’ undeclared (first use in this function)
     for(int x=0;c<hands[i]->n_cards;x++){
                 ^
deck.c:89:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation of deck.c failed

Overall Grade: F
